--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ deploy:
   local_dir: public
   repo: thingsym/vaw
   target_branch: gh-pages
+  skip_cleanup: true
   keep_history: true
   on:
     branch: master
