--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ defaultContentLanguage = "en"
 defaultContentLanguageInSubdir= false
 enableMissingTranslationPlaceholders = false
 
-[Params]
+[params]
     # Source Code repository section
     description = "VAW (Vagrant Ansible WordPress) is Ansible playbooks for website developer, designer, webmaster and WordPress theme/plugin developer."
     github_repository = "https://github.com/thingsym/vaw"
@@ -77,11 +77,14 @@ enableMissingTranslationPlaceholders = false
         endLevel = 4
         ordered = false
 
+[outputs]
+    home = ["HTML", "RSS", "Algolia"]
+
 # Algolia Search configure section
 [outputFormats.Algolia]
     baseName = "algolia"
-    isPlainText = true
     mediaType = "application/json"
+    isPlainText = true
     notAlternative = true
 
 [params.algolia]
