fix: change hugo docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3'
 services:
   hugo:
-    image: klakegg/hugo:0.81.0-alpine
-    # image: klakegg/hugo:0.81.0-ext-alpine
-    command: "server --bind 0.0.0.0 -wD --ignoreCache --minify"
+    image: hugomods/hugo:go-0.121.2
+    command: "hugo server --bind 0.0.0.0 -wD --ignoreCache --minify --panicOnWarning"
     volumes:
       - .:/src
     ports:
